@@ -28,47 +28,47 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 public class LambdaQueryTestRunner  extends BaseTestRunner{
-	private static final Logger _logger = LoggerFactory.getLogger(LambdaQueryTestRunner.class);
+    private static final Logger _logger = LoggerFactory.getLogger(LambdaQueryTestRunner.class);
 
-	@Test
-	void queryByLambdaQuery(){
-		_logger.info("query by LambdaQuery ...");
-		List<String> majorList = new ArrayList<>(Arrays.asList("政治","化学"));
-		service.query(
-				new LambdaQuery<Students>().eq(Students::getStdMajor, "政治").and().gt(Students::getStdAge, Integer.valueOf(30)).and().in(Students::getStdMajor, majorList)
-				.or(new LambdaQuery<Students>().eq(Students::getStdName, "周瑜").or().eq(Students::getStdName, "吕蒙")));
-		//service.query(
-		//		new LambdaQuery<Students>().eq(Students::getStdMajor, "政治").and().gt(Students::getStdAge, Integer.valueOf(30)).and().in(Students::getStdMajor, new Object[]{"政治","化学"})
-		//		.or(new LambdaQuery<Students>().eq(Students::getStdName, "周瑜").or().eq(Students::getStdName, "吕蒙")));
-	}
-	
-	@Test
-	void queryByLambdaQuery2(){
-		_logger.info("query by LambdaQuery ...");
-		List<String> majorList = new ArrayList<>(Arrays.asList("政治","化学"));
-		service.query(
-				new LambdaQuery<Students>().eq(Students::getStdMajor, "政治").gt(Students::getStdAge, Integer.valueOf(30)).in(Students::getStdMajor, majorList)
-				.or(new LambdaQuery<Students>().eq(Students::getStdName, "周瑜").or().eq(Students::getStdName, "吕蒙")));
-		//service.query(
-		//		new LambdaQuery<Students>().eq(Students::getStdMajor, "政治").and().gt(Students::getStdAge, Integer.valueOf(30)).and().in(Students::getStdMajor, new Object[]{"政治","化学"})
-		//		.or(new LambdaQuery<Students>().eq(Students::getStdName, "周瑜").or().eq(Students::getStdName, "吕蒙")));
-	}
-	
-	
-	@Test
-	void queryByLambdaQueryIterator(){
-		_logger.info("query by LambdaQuery ...");
-		List<String> majorList = List.of("政治","化学");
-		_logger.debug("{}",majorList.getClass().getSimpleName());
-		List<Students> list = service.query(new LambdaQuery<Students>().in(Students::getStdMajor, majorList));
+    @Test
+    void queryByLambdaQuery(){
+        _logger.info("query by LambdaQuery ...");
+        List<String> majorList = new ArrayList<>(Arrays.asList("政治","化学"));
+        service.query(
+                new LambdaQuery<Students>().eq(Students::getStdMajor, "政治").and().gt(Students::getStdAge, Integer.valueOf(30)).and().in(Students::getStdMajor, majorList)
+                .or(new LambdaQuery<Students>().eq(Students::getStdName, "周瑜").or().eq(Students::getStdName, "吕蒙")));
+        //service.query(
+        //        new LambdaQuery<Students>().eq(Students::getStdMajor, "政治").and().gt(Students::getStdAge, Integer.valueOf(30)).and().in(Students::getStdMajor, new Object[]{"政治","化学"})
+        //        .or(new LambdaQuery<Students>().eq(Students::getStdName, "周瑜").or().eq(Students::getStdName, "吕蒙")));
+    }
+    
+    @Test
+    void queryByLambdaQuery2(){
+        _logger.info("query by LambdaQuery ...");
+        List<String> majorList = new ArrayList<>(Arrays.asList("政治","化学"));
+        service.query(
+                new LambdaQuery<Students>().eq(Students::getStdMajor, "政治").gt(Students::getStdAge, Integer.valueOf(30)).in(Students::getStdMajor, majorList)
+                .or(new LambdaQuery<Students>().eq(Students::getStdName, "周瑜").or().eq(Students::getStdName, "吕蒙")));
+        //service.query(
+        //        new LambdaQuery<Students>().eq(Students::getStdMajor, "政治").and().gt(Students::getStdAge, Integer.valueOf(30)).and().in(Students::getStdMajor, new Object[]{"政治","化学"})
+        //        .or(new LambdaQuery<Students>().eq(Students::getStdName, "周瑜").or().eq(Students::getStdName, "吕蒙")));
+    }
+    
+    
+    @Test
+    void queryByLambdaQueryIterator(){
+        _logger.info("query by LambdaQuery ...");
+        List<String> majorList = List.of("政治","化学");
+        _logger.debug("{}",majorList.getClass().getSimpleName());
+        List<Students> list = service.query(new LambdaQuery<Students>().in(Students::getStdMajor, majorList));
 
-		_logger.info("list {}",list);
-		
-		List<String > ids = list.stream().map(Students::getId).distinct().toList();
-		
-		_logger.info("ids {}",ids.getClass().getCanonicalName());
-		
-		list = service.query(new LambdaQuery<Students>().in(Students::getId, majorList));
-		_logger.info("id query list {}",list);	}
+        _logger.info("list {}",list);
+        
+        List<String > ids = list.stream().map(Students::getId).distinct().toList();
+        
+        _logger.info("ids {}",ids.getClass().getCanonicalName());
+        
+        list = service.query(new LambdaQuery<Students>().in(Students::getId, majorList));
+        _logger.info("id query list {}",list);    }
 
 }
